# gcast

./: .gitignore  Cargo.toml  Makefile  README.org  common.mk  deploy-config-default.mk  deploy-config.def.mk  deploy-config.mk.default
cli/: Cargo.toml  Makefile
client/: .gitignore  Cargo.toml  Makefile  gcast-client.service  gcast-client.service.in  index.html.in  serve.py
client/src/: back_button.rs  confirm_button.rs  debounce.rs  debug.rs  errormessage.rs  hooks.rs  lib.rs  mpv.rs  nothing.rs  pending.rs  playurl.rs  progressbar.rs  rejected.rs  search.rs  spotify.rs  websocket.rs
client/src/hooks/: server.rs  visibility.rs  websocket.rs
client/web-root/: index.html
client/web-root/css/: colors.css  icons.css  leckerlione.css  mpv.css  overall.css  searcher.css  utils.css
libmpv/: Cargo.toml  build.rs
libmpv/examples/: simple-async.rs  simple.rs
libmpv/src/: bindings.rs  lib.rs  mpv.rs  mpv_handle.rs  see_string.rs
libmpv/src/mpv/: asynchronous.rs  commands.rs  data.rs  error.rs  events.rs  logs.rs  macros.rs  properties.rs
protocol/: Cargo.toml
protocol-macros/: Cargo.toml
protocol-macros/src/: lib.rs
protocol/src/: lib.rs  to_client.rs  to_server.rs  util.rs
protocol/src/to_client/: front.rs  notification.rs  seat.rs  status.rs
protocol/src/to_client/front/: errormsg.rs  filesearch.rs  mpv.rs
protocol/src/to_client/front/filesearch/: init.rs  refreshing.rs  results.rs  tree.rs
protocol/src/to_client/front/mpv/: playstate.rs
protocol/src/to_client/status/: mpv.rs
protocol/src/to_server/: errormsgctrl.rs  fscontrol.rs  fsstart.rs  mpvcontrol.rs  mpvplay.rs  mpvstart.rs  playurlstart.rs  powerctrl.rs  sendstatus.rs  spotifyctrl.rs  spotifystart.rs
protocol/src/to_server/mpvstart/: file.rs  url.rs
searcher/: Cargo.toml
searcher/src/: lib.rs  searcher.rs  util.rs
searcher/src/searcher/: compile.rs  match.rs  util.rs
server/: .gitignore  Cargo.toml  Makefile  config-default.toml  config.def.toml  gcast-server.service  gcast-server.service.in
server/src/: caster.rs  config.rs  connections.rs  filer.rs  job.rs  main.rs  mpv.rs  process.rs  repeatable_oneshot.rs  signal.rs  state_machine.rs  util.rs
server/src/caster/: filerjob.rs  front_state_manager.rs  frontjob.rs  mpvjob.rs  processjob.rs
server/src/connections/: tractor.rs
server/src/filer/: cache.rs  run_filer.rs  search.rs  tree.rs
server/src/filer/cache/: scan.rs
server/src/job/: handlejob.rs  staticjob.rs
server/src/mpv/: errors.rs  lang.rs
server/src/state_machine/: error_msg.rs  error_msg_state.rs  filer_state.rs  init_state.rs  mpv_play.rs  mpv_state.rs  play_url_state.rs
server/src/state_machine/init_state/: filer_state.rs  mpv_state.rs  play_url_state.rs  spotify_state.rs
src/: ansistring.rs  lcs.rs  lib.rs  main.rs  net.rs  searcher.rs
src/lcs/: iterator.rs  util.rs
src/searcher/: compile.rs  lcs.rs  match.rs  matcher.rs  substring.rs  util.rs
src/searcher/lcs/: dp.rs  iterator.rs
