[workspace]
members = [
  "server",
  "searcher",
  "cli",
  "client",
  "protocol",
  "protocol-macros",
  "libmpv",
]
resolver = "2"

[workspace.dependencies]
#TODO: scale down on features on tokio
tokio = {version="1.21", features=["full"]} # server: async runtime
tokio-util = "0.7" # server: cancellation token
tokio-tungstenite = "0.21" # server: websocket
futures-util = "0.3" # server: streams and sinks
#TODO: use the new stabilized async traits in rust 1.75
async-trait = "0.1" # server: FutureCancel trait
toml = "0.8" # server: config file

libc = "0.2" # server: signal handlers
dirs = "4.0" # server: access .config etc

log = "0.4" # all: log interface
fern-format = {git = "https://github.com/erikvader/fern-format.git", tag = "0.2.0"} # server, cli: log to stderr
fern = "0.6" # server, cli: log to stderr
systemd-journal-logger = "2.1" # server: log to systemd

thiserror="1.0" # server, protocol, searcher: create custom error types
anyhow = "1.0" # server: nice error handling

delegate = "0.12" # server: CacheDirEntry

walkdir = "2.3" # server: visit all files in directories
serde = {version="1.0", features=["derive"]} # server, protocol: serialize
bincode = "1.3" # server, protocol: serialize implemention

colored = "2" # cli: terminal colors
tungstenite = "0.21" # cli: websockets blocking
clap = {version="4.0", features=["derive"]} # cli: commandline arguments

yew = {version="0.21", features=["csr"]} # client: react
wasm-bindgen = "0.2" # client: wasm stuff
wasm-logger = "0.2" # client: log to web browser console
web-sys = "0.3" # client: access HtmlInputElement
url = "2.5" # client, protocol: debug view

gloo-net = {version="0.2", default-features=false} # client: wasm websockets
gloo-events = "0.2" # client: check for visibility
gloo-timers = "0.2" # client: debouncing
wasm-bindgen-futures = "0.4" # client: async integration between rust and js
futures = "0.3" # client: streams and sinks (futures_util didn't work)

chrono = {version="0.4", default-features=false} # client: to format cache date nicely
derivative = "2.2" # client: for the hooks

ordered-float = {version="3.1", features=["serde"]} # protocol: NotNan
num-traits = "0.2" # protocol: NotNan

itertools = "0.12" # searcher: tuple_windows, client: intersperse divs
#TODO: scale down on features on regex
regex = "1" # searcher: primary search tool
regex-syntax = "0.8" # searcher: escape strings

quote = "1" # protocol-macros
syn = {version = "2", features=["full"]} # protocol-macros
proc-macro2 = "1" # protocol-macros
once_cell = "1.17" # protocol-macros: for regexes

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[profile.release]
# NOTE: its nice to have debuginfo, so don't strip it
# strip = "debuginfo"
# NOTE: in fact, lets make sure some are actually included, but not everything
debug = "limited"
# NOTE: optimizes between crates
lto = "thin"
