[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2"
searcher = {path="../searcher"}

protocol = {path="../protocol"}
tungstenite = "0.17"

log = "0.4"
simplelog = "0.12"

clap = {version="4.0", features=["derive"]}

[[bin]]
name = "lcs-test"

[[bin]]
name = "test-client"
