[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
colored.workspace = true
searcher = {path="../searcher"}

protocol = {path="../protocol"}
tungstenite.workspace = true

log.workspace = true
simplelog.workspace = true

clap.workspace = true

[[bin]]
name = "lcs-test"

[[bin]]
name = "test-client"
