[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
colored.workspace = true
searcher = {path="../searcher", features=["search-fun"]}

protocol = {path="../protocol"}
tungstenite.workspace = true

log.workspace = true
fern.workspace = true
fern-format.workspace = true

clap.workspace = true

[[bin]]
name = "lcs-test"

[[bin]]
name = "test-client"
