[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew.workspace = true
yew-agent.workspace = true
wasm-bindgen.workspace = true

web-sys = {workspace = true, features = ["VisibilityState"]}

wasm-logger.workspace = true
log.workspace = true

protocol = {path="../protocol"}
gloo-net = {workspace = true, features = ["websocket"]}
gloo-events.workspace = true
wasm-bindgen-futures.workspace = true
futures.workspace = true

chrono = {workspace=true, features=["wasmbind", "clock"]}
searcher = {path="../searcher"}
