[package]
name = "searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = {workspace = true, optional = true}
regex = {workspace = true, optional = true}
regex-syntax = {workspace = true, optional = true}
thiserror = {workspace = true, optional = true}

[features]
default = []
search-fun = ["itertools", "regex", "regex-syntax", "thiserror"]
