[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version="1.21", features=["full"]} #TODO: scale down on features
tokio-util = "0.7"
tokio-tungstenite = "0.17"
futures-util = "0.3"
libc = "0.2"

log = "0.4"
simplelog = "0.12"
atty = "0.2"

protocol = {path="../protocol"}
thiserror="1.0"
