[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
async-trait.workspace = true

libc.workspace = true
dirs.workspace = true

log.workspace = true
simplelog.workspace = true
atty.workspace = true

protocol = {path="../protocol"}
thiserror.workspace = true
anyhow.workspace = true

libmpv.workspace = true
derive_builder.workspace = true

searcher = {path="../searcher", features=["search-fun"]}
walkdir.workspace = true
serde.workspace = true
bincode.workspace = true
