[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
async-trait.workspace = true

libc.workspace = true
dirs.workspace = true

log.workspace = true
fern.workspace = true
fern-format.workspace = true
systemd-journal-logger.workspace = true

protocol = {path="../protocol"}
thiserror.workspace = true
anyhow.workspace = true

libmpv = {path="../libmpv"}
searcher = {path="../searcher", features=["search-fun"]}
walkdir.workspace = true
serde.workspace = true
bincode.workspace = true

toml.workspace = true
delegate.workspace = true
itertools.workspace = true
